# commons-auth-api/src/doc/swagger/api-docs.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "Handles authentication + authorization with registration-, invite and password-reset flows.",
-    "version": "4.0.0",
+    "version": "4.2.0",
     "title": "commons-auth api",
     "contact": {
       "name": "rocketbase.io",
@@ -1022,6 +1022,58 @@
         "deprecated": false
       }
     },
+    "/api/user/{id}/password": {
+      "put": {
+        "tags": [
+          "admin"
+        ],
+        "summary": "reset password",
+        "description": "admins can reset password of user",
+        "operationId": "restPasswordUsingPUT",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "*/*"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "resetPassword",
+            "description": "reset password of a user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AppUserResetPassword"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/AppUserRead"
+            }
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "deprecated": false
+      }
+    },
     "/api/invite": {
       "get": {
         "tags": [
@@ -1824,6 +1876,15 @@
         }
       },
       "title": "UsernameChangeRequest"
+    },
+    "AppUserResetPassword": {
+      "type": "object",
+      "properties": {
+        "resetPassword": {
+          "type": "string"
+        }
+      },
+      "title": "AppUserResetPassword"
     },
     "EmailChangeRequest": {
       "type": "object",
