# commons-auth-api/src/main/java/io/rocketbase/commons/api/AppUserApi.java
@@ -3,10 +3,7 @@ package io.rocketbase.commons.api;
 import io.rocketbase.commons.dto.PageableResult;
 import io.rocketbase.commons.dto.appinvite.AppInviteRead;
 import io.rocketbase.commons.dto.appinvite.InviteRequest;
-import io.rocketbase.commons.dto.appuser.AppUserCreate;
-import io.rocketbase.commons.dto.appuser.AppUserRead;
-import io.rocketbase.commons.dto.appuser.AppUserUpdate;
-import io.rocketbase.commons.dto.appuser.QueryAppUser;
+import io.rocketbase.commons.dto.appuser.*;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
@@ -25,7 +22,9 @@ public interface AppUserApi {
 
     AppUserRead create(AppUserCreate create);
 
-    AppUserRead patch(String id, AppUserUpdate update);
+    AppUserRead resetPassword(String usernameOrId, AppUserResetPassword reset);
+
+    AppUserRead patch(String usernameOrId, AppUserUpdate update);
 
     void delete(String id);
 
