# commons-auth-server/src/main/java/io/rocketbase/commons/controller/AppUserController.java
@@ -5,6 +5,7 @@ import io.rocketbase.commons.converter.AppUserConverter;
 import io.rocketbase.commons.dto.PageableResult;
 import io.rocketbase.commons.dto.appuser.AppUserCreate;
 import io.rocketbase.commons.dto.appuser.AppUserRead;
+import io.rocketbase.commons.dto.appuser.AppUserResetPassword;
 import io.rocketbase.commons.dto.appuser.AppUserUpdate;
 import io.rocketbase.commons.exception.NotFoundException;
 import io.rocketbase.commons.model.AppUserEntity;
@@ -54,6 +55,15 @@ public class AppUserController implements BaseController {
         validationService.registrationIsValid(create.getUsername(), create.getPassword(), create.getEmail());
 
         AppUserEntity entity = appUserService.initializeUser(create);
+        return appUserConverter.fromEntity(entity);
+    }
+
+    @RequestMapping(method = RequestMethod.PUT, path = "/api/user/{id}/password", consumes = APPLICATION_JSON_VALUE)
+    @ResponseBody
+    public AppUserRead restPassword(@PathVariable("id") String id,  @RequestBody @NotNull @Validated AppUserResetPassword reset) {
+        validationService.passwordIsValid("resetPassword", reset.getResetPassword());
+
+        AppUserEntity entity = appUserService.updatePasswordUnchecked(id, reset.getResetPassword());
         return appUserConverter.fromEntity(entity);
     }
 
